--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: python
+python:
+    - 2.6
+    - 2.7
+    - 3.2
+    - 3.3
+    - 3.4
 install:
-    - pip install tox
+    pip install unittest2
 script:
-    - tox
+    - python -m unittest2.__main__ discover tests
 
