--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: python
 python:
-    - 2.6
     - 2.7
-    - 3.2
-    - 3.3
-    - 3.4
+env:
+    matrix:
+        - TOXENV=py26
+        - TOXENV=py27
+        - TOXENV=py32
+        - TOXENV=py33
+        - TOXENV=py34
+        - TOXENV=flake8
 install:
-    - pip install -r tests/requirements.txt
-script:
     - vim --version
-    - python -m discover -v
+    - pip install tox
+script:
+    - tox
