--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,15 @@
 [tox]
 skipsdist = True
-envlist = py26, py27, py32, py33, py34
+envlist = py{26,27,32,33,34}, flake8
 
 [testenv]
 deps = -r{toxinidir}/tests/requirements.txt
 commands = {envpython} -m discover -v tests
+
+[testenv:flake8]
+deps = flake8
+commands = flake8 autoload tests
+
+[flake8]
+ignore = E128
+max-line-length = 100
