--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py{26,27,32,33,34}, flake8
+envlist = py{26,27,32,33,34}, flake8, vint
 
 [testenv]
 deps = -r{toxinidir}/tests/requirements.txt
@@ -9,6 +9,11 @@ commands = {envpython} -m discover -v tests
 [testenv:flake8]
 deps = flake8
 commands = flake8 autoload tests
+
+[testenv:vint]
+basepython = python2.7
+deps = vim-vint
+commands = vint autoload plugin
 
 [flake8]
 ignore = E128
