--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
         - TOXENV=py33
         - TOXENV=py34
         - TOXENV=flake8
+        - TOXENV=vint
 install:
     - vim --version
     - pip install tox
