--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps = -r{toxinidir}/tests/requirements.txt
 commands = {envpython} -m discover -v tests
 
 [testenv:flake8]
+basepython = python2.7
 deps = flake8
 commands = flake8 autoload tests
 
