--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ env:
         - TOXENV=vint
 install:
     - vim --version
-    - pip install tox
+    - pip install tox "virtualenv<14.0.0"
 script:
     - tox
